--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,8 +17,15 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
     "recharts": "^2.12.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    
+
+    "perfect-scrollbar": "1.5.5",
+    "react-notification-alert": "0.0.13",
+    "react-router-dom": "6.11.1",
+    "sass": "1.62.1"
   },
   "scripts": {
     "start": "react-scripts start",
